Changed the .oit-card class to make it more compatible with bootstrap

--- a/buildings/purvine.html
+++ b/buildings/purvine.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,74 +9,71 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/building.css">
-    <!-- <link rel="manifest" href="manifest.json"> -->
+
     <meta name="mobile-web-app-capable" content="yes">
     <title>Purvine Hall</title>
 </head>
-<body>
-<table class="container-fluid p-0">
-    <tr class="row m-auto">
-        <td class="col-12 cover main" id="building-crop-1">
-            <img src="../images/purvine1.jpg">
-        </td>
-    </tr>
-    <tr class="row m-auto">
-        <td class="col-4 cover"><img src="../images/purvine2.jpg"></td>
-        <td class="col-4 cover"><img src="../images/purvine3.jpg"></td>
-        <td class="col-4 cover"><img src="../images/purvine4.jpg"></td>
-    </tr>
-    <tr class="row m-auto">
-        <td class="col-4 blue-box">
-            <h4>Quick Facts</h4>
-            <h5>Built</h5>
-            <p>0000</p>
-            <h5>Primary Majors</h5>
-            <p>Software</p>
-            <p>Embedded</p>
-            <p>Electical</p>
-        </td>
-        <td class="col-8">
-                <h1 class="title">Purvine Hall</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, molestias praesentium! Minus eum, eaque laborum nemo quae eos velit aut at mollitia asperiores, sint unde dolorum doloribus repellendus modi dolores!
-            </p>
-        </td>
-    </tr>
-</table>
 
-<!-- Images for this file are stored in ../css/building.scss -->
-<div class="scroll">
-    <div class="oit-card crop">
-        <div id="card-img-1">
+<body>
+    <table class="container-fluid p-0">
+        <tr class="row m-auto">
+            <td class="col-12 cover main" id="building-crop-1">
+                <img src="../images/purvine1.jpg">
+            </td>
+        </tr>
+        <tr class="row m-auto">
+            <td class="col-4 cover"><img src="../images/purvine2.jpg"></td>
+            <td class="col-4 cover"><img src="../images/purvine3.jpg"></td>
+            <td class="col-4 cover"><img src="../images/purvine4.jpg"></td>
+        </tr>
+        <tr class="row m-auto">
+            <td class="col-4 blue-box">
+                <h4>Quick Facts</h4>
+                <h5>Built</h5>
+                <p>0000</p>
+                <h5>Primary Majors</h5>
+                <p>Software</p>
+                <p>Embedded</p>
+                <p>Electical</p>
+            </td>
+            <td class="col-8">
+                <h1 class="title">Purvine Hall</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, molestias praesentium! Minus eum,
+                    eaque laborum nemo quae eos velit aut at mollitia asperiores, sint unde dolorum doloribus
+                    repellendus modi dolores!
+                </p>
+            </td>
+        </tr>
+
+    <!-- Images for this file are stored in ../css/building.scss -->
+    <tr class="row">
+        <td class="oit-card col-3 p-0" id="card-img-1">
             <div class="oit-card-text">
                 <p>CEET</p>
             </div>
-        </div>
-    </div>
-    <div class="oit-card crop">
-        <div id="card-img-2">
+        </td>
+        <td class="oit-card col-3 p-0" id="card-img-2">
+
             <div class="oit-card-text">
                 <p>College Union</p>
             </div>
-        </div>
-        
-    </div>
-    <div class="oit-card crop">
-        <div id="card-img-3">
+
+        </td>
+        <td class="oit-card col-3 p-0" id="card-img-3">
             <div class="oit-card-text">
                 <p>Dow Center</p>
             </div>
-        </div>
-    </div>
-    <div class="oit-card crop">
-        <div id="card-img-4">
+        </td>
+        <td class="oit-card col-3 p-0" id="card-img-4">
             <div class="oit-card-text">
                 <p>Snell Hall</p>
             </div>
-        </div>
-    </div>
-</div>
+        </td>
+    </tr>
+    </table>
 
-<script src="../build/bootstrap.bundle.js"></script>
+    <script src="../build/bootstrap.bundle.js"></script>
 </body>
+
 </html>
