--- a/home_page.html
+++ b/home_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>OIT Info Home</title>
 </head>
+
 <body>
     <table class="container-fluid">
         <div id="page_banner">
@@ -39,33 +41,24 @@
             </td>
         </tr>
         <tr class="row">
-            <td class="oit-card">
-                <div id="card-img-1">
-                    <div class="oit-card-text">
-                        <p id="major-1">Software Engineering</p>
-                    </div>
+            <td class="oit-card col-3 p-0" id="card-img-1">
+                <div class="oit-card-text">
+                    <p id="major-1">Software Engineering</p>
                 </div>
             </td>
-            <td class="oit-card">
-                <div id="card-img-2">
-                    <div class="oit-card-text">
-                        <p id="major-2">Civil Engineering</p>
-                    </div>
-                </div>
-                
-            </td>
-            <td class="oit-card">
-                <div id="card-img-3">
-                    <div class="oit-card-text">
-                        <p id="major-3">Echocardiology</p>
-                    </div>
+            <td class="oit-card col-3 p-0" id="card-img-2">
+                <div class="oit-card-text">
+                    <p id="major-2">Civil Engineering</p>
                 </div>
             </td>
-            <td class="oit-card">
-                <div id="card-img-4">
-                    <div class="oit-card-text">
-                        <p id="major-4">Mechanical Engineering</p>
-                    </div>
+            <td class="oit-card col-3 p-0" id="card-img-3">
+                <div class="oit-card-text">
+                    <p id="major-3">Echocardiology</p>
+                </div>
+            </td>
+            <td class="oit-card col-3 p-0" id="card-img-4">
+                <div class="oit-card-text">
+                    <p id="major-4">Mechanical Engineering</p>
                 </div>
             </td>
         </tr>
@@ -86,7 +79,7 @@
         </a>
 
         <button class="navbar-toggler" type="button" data-sr-toggle="collapse" data-sr-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- <div class="navbar-brand">
@@ -130,6 +123,7 @@
         </div>
     </nav>
 
-<script src="build/bootstrap.bundle.js"></script>
+    <script src="build/bootstrap.bundle.js"></script>
 </body>
+
 </html>
