--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="building_select.html">Building Selector</a>
         </p>
         <p><a href="major/set.html">Software Engineering Technology</a></p>
+        <p><a href="major_select.html">Major Select</a></p>
         <p><a href="aaaaaaaaaaaaaaaaaa.html">404</a></p>
     </div>
 
