Actually works with padding now

--- a/home_page.html
+++ b/home_page.html
@@ -41,24 +41,32 @@
             </td>
         </tr>
         <tr class="row">
-            <td class="oit-card col-3 p-0" id="card-img-1">
-                <div class="oit-card-text">
-                    <p id="major-1">Software Engineering</p>
+            <td class="col-3 p-1" id="card-img-1">
+                <div class="oit-card" id="card-img-1">
+                    <div class="oit-card-text">
+                        <p id="major-1">Software Engineering</p>
+                    </div>
                 </div>
             </td>
-            <td class="oit-card col-3 p-0" id="card-img-2">
-                <div class="oit-card-text">
-                    <p id="major-2">Civil Engineering</p>
+            <td class="col-3 p-1">
+                <div class="oit-card" id="card-img-2">
+                    <div class="oit-card-text">
+                        <p id="major-2">Civil Engineering</p>
+                    </div>
                 </div>
             </td>
-            <td class="oit-card col-3 p-0" id="card-img-3">
-                <div class="oit-card-text">
-                    <p id="major-3">Echocardiology</p>
+            <td class="col-3 p-1">
+                <div class="oit-card" id="card-img-3">
+                    <div class="oit-card-text">
+                        <p id="major-3">Echocardiology</p>
+                    </div>
                 </div>
             </td>
-            <td class="oit-card col-3 p-0" id="card-img-4">
-                <div class="oit-card-text">
-                    <p id="major-4">Mechanical Engineering</p>
+            <td class="col-3 p-1">
+                <div class="oit-card" id="card-img-4">
+                    <div class="oit-card-text">
+                        <p id="major-4">Mechanical Engineering</p>
+                    </div>
                 </div>
             </td>
         </tr>
